--- a/src/components/todo-list.scss
+++ b/src/components/todo-list.scss
@@ -1,3 +1,5 @@
-.todo-list .list-group-item {
-    padding: 0.25rem 0.75rem;
+.todo-list{ 
+    .list-group-item {
+    padding: .25rem .75rem;
+  }
 }
